<resources>
    <string name="app_name">Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="foodieverse">FoodieVerse</string>
    <string name="find_the_best_taste_food_from_us">Find the best taste food from us!</string>
    <string name="sign_in">sign in</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tajwar_ali">Tajwar Ali</string>
    <string name="_10_00am_12_00pm">10:00AM - 12:00PM</string>
    <string name="product_name">Product Name</string>
    <string name="rating_5_0">Rating: 5.0</string>
    <string name="_10_00am_10_00pm">10:00Am-10:00PM</string>
    <string name="your_most_desired_and_favourite_foods_are_here">Your most desired and favourite foods are here!</string>
    <string name="view_more">View more</string>
    <string name="place_order">Place Order</string>
    <string name="your_cart">Your Cart</string>
</resources>